Data Pre Processing

--- a/Angel_Data/Version_0.0 .ipynb
+++ b/Angel_Data/Version_0.0 .ipynb
@@ -1,11 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab_type": "text",
     "id": "vq9ya9jtU8Ih"
    },
+   "outputs": [],
    "source": [
     "<b>Features:</b> Following are the features in dataset:\n",
     "\n",
@@ -110,7 +112,18 @@
     "id": "n07gBFPRU8Iu",
     "outputId": "2eccfab5-dece-4533-dd89-484642102eeb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((805, 31), (2826, 37), (2390, 28), (522, 28))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1.shape, df2.shape, df3.shape, df4.shape"
    ]
@@ -124,7 +137,18 @@
     "id": "TwzLyHrQU8Iz",
     "outputId": "7f4b6e18-eea9-4426-ac6d-326bee8f8032"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6543, 39)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.shape"
    ]
@@ -138,7 +162,18 @@
     "id": "CQATr2RJU8I3",
     "outputId": "b10f7606-942c-4993-e2d6-10d9c61e38ea"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1475, 3883)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data[\"Designation\"].isna().sum(), data[\"Designation 2\"].isna().sum()"
    ]
@@ -173,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -190,21 +225,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "6iBQY4s1U8I-",
     "outputId": "bf506061-23fa-4589-cf60-436cf53a8cd8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Contact Status', 'Designation', 'Designation 2', 'Designation 3',\n",
+       "       'Detail Tech Requirement', 'Funding', 'Location', 'Requirements',\n",
+       "       'Size'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -229,14 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "x53yjHqOU8JF",
     "outputId": "f5ce4994-3057-4d67-fbab-91b2fd4e1550"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(None, dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data[\"Contact Status\"].unique()\n",
     "np.array(data[\"Contact Status\"].fillna(\"Missing\", inplace=True))"
@@ -244,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -259,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -267,9 +327,9 @@
    },
    "outputs": [],
    "source": [
-    "data.head(2)\n",
-    "import csv\n",
-    "data.to_csv(\"Column_Selection.csv\")"
+    "# data.head(2)\n",
+    "# import csv\n",
+    "# data.to_csv(\"Column_Selection.csv\")"
    ]
   },
   {
@@ -284,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -299,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -312,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -325,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -338,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -352,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -369,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -384,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -398,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -412,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -427,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -440,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -453,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -466,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -480,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -493,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -517,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -530,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -544,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -566,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -596,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -619,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -636,21 +696,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "0zyjAcXmU8KT",
     "outputId": "c31ab0b3-9826-4ba6-bd1d-0cf4eb0508ce"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Back End', 'Full Stack, Front End', 'ReactJS', 'Front End']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "l[:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -665,21 +736,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "aTyZmb_wU8Ka",
     "outputId": "15b041d3-afd4-4394-80f5-069ede64f6c0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Back End'], ['Full Stack', ' Front End'], ['ReactJS'], ['Front End']]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "req[:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -694,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -722,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -736,14 +818,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "8GQmKL_eU8Ko",
     "outputId": "bab66d2c-a499-4120-8fd7-d594fdaa2c33"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4839]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dict[\"vineeta@fabbag.com\"]"
    ]
@@ -760,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -775,14 +868,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "CZnGzEYTU8Kw",
     "outputId": "f7e43fbb-9869-4f0d-93ee-61a776cbdd64"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1809]\n",
+      "[4469]\n",
+      "[4837]\n",
+      "[4838]\n",
+      "[4839]\n",
+      "[4840]\n",
+      "[4841]\n",
+      "[4842]\n",
+      "[5751]\n",
+      "[5897]\n"
+     ]
+    }
+   ],
    "source": [
     "for i in dict.keys():\n",
     "    if \"@\" in i:\n",
@@ -791,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -805,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -819,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -833,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -847,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -862,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -887,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -903,12 +1013,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "WYB7WXybU8QP"
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(new_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6543, 246)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_d.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6543, 10)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "new_d.to_csv(\"Requirements.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "req_data = pd.read_csv(\"Requirements.csv\")\n",
+    "# whole_data = pd.concat([data, req_data])\n",
+    "# req_data.drop(columns=\"Unnamed: 0\", inplace = True)\n",
+    "req_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in req_data.columns:\n",
+    "    if \"@\" in i:\n",
+    "        req_data.drop(columns=i, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6543, 237)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "req_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0    0.0\n",
+       " 1    0.0\n",
+       " Name: backend, dtype: float64, 0    1.0\n",
+       " 1    0.0\n",
+       " Name: backend, dtype: float64)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# whole_data.drop(columns=\"Unnamed: 33\", inplace =True)\n",
+    "# whole_data.backend[:2], req_data.backend[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['.net', 'Contact Status', 'Designation', 'Designation 2',\n",
+       "       'Designation 3', 'Detail Tech Requirement', 'Funding', 'Location',\n",
+       "       'Size', 'ai',\n",
+       "       ...\n",
+       "       'ux/uifullstack', 'vineeta@fabbag.com', 'web', 'web/ui', 'webapp',\n",
+       "       'webbackend', 'webfrontend', 'webfullstack', 'webgraphic', 'webui'],\n",
+       "      dtype='object', length=254)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "whole_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_req = req_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in whole_data.columns:\n",
+    "    if i in list_req:\n",
+    "        whole_data[i].fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "whole_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.drop(columns=[\"Detail Tech Requirement\", \"Requirements\"], inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
