Performed preprocessing on Location and Designation.

--- a/Angel_Data/Pre_Processing.ipynb
+++ b/Angel_Data/Pre_Processing.ipynb
@@ -200,6 +200,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Here replace designation of the contact person by one which it at higher rank in hierarchy__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -226,48 +233,6 @@
    "outputs": [],
    "source": [
     "comb = (data.combined).str.split(\"/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l = []\n",
-    "for i in comb:\n",
-    "    if set([\"F\",\"Founder\",\"CF\", \"Co-founder\", \"President\", \"Director\", \"MD\", \"Founder & CEO\", \"Owner\", \"cbo\"]).issubset(i):\n",
-    "        l.append(\"Founder\")\n",
-    "    elif set([\"Associate VP\",\"VP\"]).issubset(i):\n",
-    "        l.append(\"VP\")\n",
-    "    elif set([\"CEO\", \"CTO\"]).issubset(i):\n",
-    "        l.append(\"CEO\")\n",
-    "\n",
-    "    elif set([\"HR\",\" VP HR\"]).issubset(i):\n",
-    "        l.append(\"HR\")\n",
-    "    else:\n",
-    "        l.append(\"Missing\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(comb[0]).issubset([\"F\",\"Founder\",\"CF\", \"Co-founder\" \"cbo\"])"
    ]
   },
   {
@@ -465,13 +430,6 @@
     "import csv\n",
     "data.to_csv(\"Desingation.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
