--- a/Angel_Data/ALgo_1.ipynb
+++ b/Angel_Data/ALgo_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,35 +12,26 @@
     "import seaborn as sb\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "from sklearn.preprocessing import OneHotEncoder, LabelBinarizer, LabelEncoder"
+    "from sklearn.preprocessing import OneHotEncoder, LabelBinarizer, LabelEncoder\n",
+    "from sklearn.metrics import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"Final_Data.csv\")\n",
-    "data.head(2)"
+    "data = pd.read_csv(\"Final_Data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "data.drop(columns=[\"Company_Name\", \"Unnamed: 0\", \"Unnamed: 0.1\"], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.shape"
    ]
   },
   {
@@ -58,21 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sb.countplot(x=\"Contact Status\", data=data,  hue=\"Company_Type\")"
+    "# ax = sb.countplot(x=\"Contact Status\", data=data,  hue=\"Company_Type\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10,10))\n",
-    "sb.heatmap(data.corr())"
+    "# plt.figure(figsize=(10,10))\n",
+    "# sb.heatmap(data.corr())"
    ]
   },
   {
@@ -84,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +115,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=128, n_jobs=1,\n",
+       "            oob_score=False, random_state=55, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fitting Random Forest Classification to the Training set\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -136,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +163,7 @@
        "       [ 160,    2]])"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,43 +177,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.020618556701030927"
+       "(0.020618556701030927, 0.8838630806845966)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.metrics import *\n",
-    "f1_score(y_test, y_pred)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8838630806845966"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy_score(y_test, y_pred)"
+    "f1_score(y_test, y_pred), accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -218,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +214,7 @@
        "       [ 162,    0]])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,43 +236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8991442542787286"
+       "(0.8991442542787286, 0.0)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import *\n",
-    "f1_score(y_test, y_pred)  "
+    "accuracy_score(y_test, y_pred), f1_score(y_test, y_pred)  "
    ]
   },
   {
@@ -298,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +273,7 @@
        "       [ 162,    0]])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,43 +294,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8991442542787286"
+       "(0.8991442542787286, 0.0)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import *\n",
-    "f1_score(y_test, y_pred)  "
+    "accuracy_score(y_test, y_pred), f1_score(y_test, y_pred)  "
    ]
   },
   {
@@ -377,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +331,7 @@
        "       [ 160,    2]])"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,43 +353,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0202020202020202"
+       "(0.8814180929095354, 0.0202020202020202)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.metrics import *\n",
-    "f1_score(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8814180929095354"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy_score(y_test, y_pred)"
+    "accuracy_score(y_test, y_pred), f1_score(y_test, y_pred)  "
    ]
   },
   {
@@ -457,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +390,7 @@
        "       [ 160,    2]])"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,43 +411,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8814180929095354"
+       "(0.8814180929095354, 0.0202020202020202)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.0202020202020202, 0.8814180929095354)"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import *\n",
-    "f1_score(y_test, y_pred), accuracy_score(y_test, y_pred)"
+    "accuracy_score(y_test, y_pred), f1_score(y_test, y_pred)  "
    ]
   },
   {
@@ -536,17 +438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(array([[1440,   34],\n",
-       "        [ 160,    2]]), 0.8850855745721271)"
+       "        [ 160,    2]]), 0.8765281173594132)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,6 +469,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8814180929095354, 0.0202020202020202)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred), f1_score(y_test, y_pred)  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -575,17 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[1440,   34],\n",
-       "        [ 160,    2]]), 0.8991442542787286)"
+       "array([[1440,   34],\n",
+       "       [ 160,    2]])"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +524,27 @@
     "# Making the Confusion Matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
-    "cm, model.score(X_test,y_test)"
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8814180929095354, 0.0202020202020202, 0.8991442542787286)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred), f1_score(y_test, y_pred), model.score(X_test,y_test)"
    ]
   },
   {
@@ -614,17 +556,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[1440,   34],\n",
-       "        [ 160,    2]]), 0.9009779951100244)"
+       "array([[1440,   34],\n",
+       "       [ 160,    2]])"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +583,27 @@
     "# Making the Confusion Matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
-    "cm, model.score(X_test,y_test)\n"
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8814180929095354, 0.0202020202020202, 0.9009779951100244)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred), f1_score(y_test, y_pred), model.score(X_test,y_test)"
    ]
   }
  ],
